# helix-trainer

./: .gitignore  AGENT_PROMPT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_QUICK_REFERENCE.md  SECURITY_REVIEW.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  scenario_request.md
.github/workflows/: ci.yml
docs/: HELIX_KEYBINDINGS.md
locales/: en.toml
scenarios/: basic.toml
scenarios/editing/: indentation.toml
scenarios/en/basic/: delete.toml  insert.toml  replace.toml
scenarios/en/clipboard/: undo-redo.toml  yank-paste.toml
scenarios/en/editing/: join.toml
scenarios/en/movement/: line.toml
scenarios/movement/: document.toml  word.toml
scenarios/repeat/: basic-repeat.toml
src/: lib.rs  main.rs  security.rs
src/config/: mod.rs  scenarios.rs
src/config/scenarios/: tests.rs
src/game/: editor_state.rs  mod.rs  scorer.rs  session.rs
src/game/editor_state/: mod.rs  tests.rs
src/game/session/: mod.rs  tests.rs
src/helix/: commands.rs  executor.rs  mod.rs  repeat.rs  simulator.rs
src/helix/simulator/: insert_mode.rs  mod.rs  tests.rs  undo.rs
src/helix/simulator/commands/: clipboard.rs  editing.rs  mod.rs  movement.rs
src/ui/: mod.rs  render.rs  state.rs
src/ui/render/: editor.rs  helpers.rs  menu.rs  mod.rs  popups.rs  results.rs  task.rs  tests.rs
tests/: ui_multi_key_commands.rs
