[package]
name = "helix-trainer"
version = "0.1.0"
edition = "2021"
authors = ["Helix Trainer Contributors"]
description = "Interactive trainer for learning Helix editor keybindings"
license = "MIT"
repository = "https://github.com/example/helix-trainer"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.8"
helix-core = { git = "https://github.com/helix-editor/helix", tag = "v0.6.0" }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.9"

[[bin]]
name = "helix-trainer"
path = "src/main.rs"
